# MineriadeDatos_Meteorologia

commonwealth/: README.md  pyproject.toml
commonwealth/conf/base/: catalog.yml
commonwealth/notebooks/: Testeo.ipynb
commonwealth/src/commonwealth/: __init__.py  __main__.py  settings.py
